--- a/docs/release-notes/v0.2.60.md
+++ b/docs/release-notes/v0.2.60.md
@@ -1,19 +1,32 @@
-# v0.2.60 リリースノート
+# v0.2.60 Release Notes
 
-ExStruct 初の公式タグ/リリースです。Excel ワークブックを JSON/YAML/TOON 形式で構造化抽出するための基盤機能を公開し、CLI と Python API の両方から利用できるようになりました。
+This is the first official release tag for ExStruct. It provides the core
+capabilities for extracting structured data from Excel workbooks and supports
+both the Python API and the CLI.
 
-## ハイライト
-- **Excel → 構造化データ**: シートごとのセル・表候補・図形・グラフ・印刷範囲・自動改ページ・ハイパーリンクを収集し、JSON を中心に出力します。
-- **出力モードの使い分け**: COM 環境がない場合は `light` でセル/表候補/印刷範囲を取得、Excel COM が利用できる環境では `standard`/`verbose` で図形・グラフ・サイズ情報・ハイパーリンクを追加出力できます。
-- **柔軟な出力形式**: 既定の JSON に加え、オプションで YAML と TOON 形式をサポート。`--pretty` で可読性を優先した JSON 生成にも対応。
-- **CLI からのレンダリング**: Excel 環境では、PDF/シートごとの PNG を生成するレンダリング機能を CLI で利用可能です。
-- **堅牢なフォールバック**: Excel COM が使えない環境ではセル/表候補抽出にフォールバックし、例外で処理が止まらないようにしています。
+## Highlights
 
-## 互換性と導入
-- PyPI から `pip install exstruct` でインストール可能です。
-- YAML/TOON/レンダリング機能はそれぞれオプション依存を追加することで有効化できます（`exstruct[yaml]`, `exstruct[toon]`, `exstruct[render]`, もしくは `exstruct[yaml,toon,render]`）。
-- 図形・グラフを含むリッチ抽出は Windows + Excel (COM via xlwings) を対象としています。その他の環境では `mode=light` を推奨します。
+- Excel structured data: extract cells, table candidates, shapes, charts, print
+  areas, auto page-break areas, and hyperlinks into JSON by default.
+- Output modes: use `light` for non-COM environments (cells, tables, print
+  areas) and `standard`/`verbose` when Excel COM is available for richer
+  extraction including shapes, charts, sizes, and hyperlinks.
+- Flexible formats: JSON by default, with optional YAML and TOON output.
+  `--pretty` produces readable JSON for inspection.
+- CLI rendering: when Excel is available, the CLI can export PDF and per-sheet
+  PNG images.
+- Graceful fallback: when Excel COM is unavailable, extraction falls back to
+  cells and table candidates without crashing.
 
-## その他
-- 既知の破壊的変更はありません（初回リリース）。
-- 不具合報告や要望は Issue にて歓迎します。
+## Compatibility and Install
+
+- Install via `pip install exstruct`.
+- Optional extras: `exstruct[yaml]`, `exstruct[toon]`, `exstruct[render]`, or
+  `exstruct[yaml,toon,render]`.
+- Full extraction (shapes/charts) targets Windows + Excel via xlwings/COM.
+  Use `mode=light` on other platforms.
+
+## Other
+
+- No breaking changes in this release.
+- Issues and feedback are welcome.
