--- a/docs/release-notes/v0.2.61.md
+++ b/docs/release-notes/v0.2.61.md
@@ -1,12 +1,26 @@
-# v0.2.61 リリースノート
+# v0.2.61 Release Notes
 
-独自の例外階層を追加してエラー応答を整理し、出力やレンダリングまわりの失敗を識別しやすくしました。また、テスト要件仕様書を再構成し、エラー処理や CLI などのカバレッジを明文化しています。
+This release standardizes error handling across extraction, serialization, and
+rendering, and documents coverage expectations for tests.
 
-## ハイライト
-- **独自例外の整備**: 共通基底の `ExstructError` と用途別の `ConfigError` / `ExtractionError` / `SerializationError` / `MissingDependencyError` / `RenderError` / `OutputError` / `PrintAreaError` を追加し、各処理系で一貫した例外型を返すようにしました。【F:src/exstruct/errors.py†L3-L35】
-- **エラー時のガイダンス強化**: 未対応フォーマットは `SerializationError` を送出し、YAML/TOON/pypdfium2 未導入時には導入方法付きの `MissingDependencyError` を返すよう統一しました。自動改ページ情報が存在しない場合は `export_auto_page_breaks` が `PrintAreaError` を明示的に返し、出力書き込みや PDF/画像生成の失敗は `OutputError` / `RenderError` にラップされます。【F:src/exstruct/__init__.py†L189-L219】【F:src/exstruct/io/__init__.py†L284-L437】【F:src/exstruct/io/__init__.py†L524-L540】【F:src/exstruct/render/__init__.py†L17-L100】
-- **テスト要件の整理**: テスト要件仕様書を v0.2 として更新し、抽出・出力・CLI・エラー処理などのカバレッジカテゴリと具体的な期待値を列挙しました。MissingDependencyError の扱いや print area/export_auto_page_breaks などの要件を含め、リリース前に担保すべき項目を明確化しています。【F:docs/agents/TEST_REQUIREMENTS.md†L1-L116】
+## Highlights
 
-## 互換性と移行
-- `PrintAreaError` は `ValueError` も継承するため、既存の `ValueError` ハンドリングでも受け止められますが、新設の例外型でハンドリングすると意図を区別しやすくなります。【F:src/exstruct/errors.py†L30-L35】
-- `export_auto_page_breaks` が自動改ページ情報なしで例外を返すようになったため、この出力を利用するコードは try/except で捕捉するか、事前に `auto_print_areas` を取得できていることを確認してください。【F:src/exstruct/__init__.py†L189-L219】
+- Exception hierarchy: added `ExstructError` plus domain-specific errors
+  (`ConfigError`, `ExtractionError`, `SerializationError`,
+  `MissingDependencyError`, `RenderError`, `OutputError`, `PrintAreaError`) for
+  consistent error handling. See `src/exstruct/errors.py`.
+- Clear dependency guidance: unsupported formats raise `SerializationError`, and
+  missing optional dependencies raise `MissingDependencyError` with installation
+  guidance. See `src/exstruct/io/__init__.py` and `src/exstruct/render/__init__.py`.
+- Auto page-break behavior: `export_auto_page_breaks` now raises
+  `PrintAreaError` when no auto page-break areas are present. See
+  `src/exstruct/__init__.py`.
+- Test requirements spec: published v0.2 coverage expectations for extraction,
+  output, CLI, and error handling. See `docs/agents/TEST_REQUIREMENTS.md`.
+
+## Compatibility Notes
+
+- `PrintAreaError` inherits `ValueError`, so existing handlers still work, but
+  using the new type makes intent explicit.
+- If your code calls `export_auto_page_breaks`, handle `PrintAreaError` or verify
+  that `auto_print_areas` is populated before exporting.
