ドキュメント更新

--- a/docs/release-notes/v0.3.2.md
+++ b/docs/release-notes/v0.3.2.md
@@ -5,7 +5,7 @@ pipeline integration and tests to cover the new feature.
 
 ## Highlights
 
-- `MergedCell` model and `SheetData.merged_cells` added to output.
+- `MergedCells` format and `SheetData.merged_cells` added to output.
 - Merged cell ranges extracted via openpyxl in standard/verbose modes.
 - Output can exclude merged cells via `OutputOptions.filters.include_merged_cells`.
 - Pipeline/Backend/Modeling integrations updated with coverage for the new flow.
